--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- src/app/app.component.html -->
 <app-header></app-header>
 <main>
-  <app-product-list></app-product-list>
+  <router-outlet></router-outlet>
 </main>
